# AI-SkillHub

./: .gitignore  CHANGELOG.md  DESIGN.md  Manage-AgentSkillLinks.ps1  OpenSkillHubUI_English.cmd  PRODUCT.md  README.md  SkillHub.UI.ps1  SkillHub.ps1  Skills共享与管理说明.md  skillhub.config.json  使用说明.md  卸载每日自动更新任务.ps1  安装每日自动更新任务.ps1  打开SkillHub界面.cmd  打开SkillHub界面_中文.cmd  更新GitHub来源并同步Skills.ps1
.github/workflows/: v2-ci.yml
app/: Build-SkillHubReleasePackage.ps1  Export-SkillHubDiagnostics.ps1  Manage-AgentSkillLinks.ps1  SkillHub.ps1  Test-ShareRecipientExperience.ps1  skillhub.config.example.json  卸载每日自动更新任务.ps1  安装每日自动更新任务.ps1  更新GitHub来源并同步Skills.ps1
app-next/: .gitignore  README.md  SKILL_CONFLICT_SELECTOR.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app-next/docs/: toolchain-setup.md  v1-exit-and-v2-start.md  v2-only-runtime.md
app-next/runtime/: Build-SkillHubReleasePackage.ps1  Export-SkillHubDiagnostics.ps1  Manage-AgentSkillLinks.ps1  SkillHub.ps1  Test-ShareRecipientExperience.ps1  Test-ZipPreviewImport.ps1  skillhub.config.example.json
app-next/scripts/: check-toolchain.ps1  stop-dev-runtime.ps1
app-next/src/: App.tsx  effects.tsx  i18n.ts  icons.tsx  preview.ts  (+2 more)
app-next/src-tauri/: Cargo.toml  tauri.conf.json
app-next/src-tauri/migrations/: 001_initial.sql
app-next/src-tauri/src/: lib.rs  main.rs
docs/: AI-SkillHub-V2-PRD-HANDOFF-2026-06-06.md  AI-SkillHub-v2-PRD.md  DESIGN.md  PRODUCT.md  Skills共享与管理说明.md  V2_ONLY_MIGRATION_2026-06-06.md  skill-router-standard.md  v2-roadmap-status.md
src/: AI.SkillHub.Launcher.cs
(+8 files in other folders)
