[package]
name = "ai-skillhub-next"
version = "2.0.2"
description = "AI SkillHub desktop app"
authors = ["FrancisZhu"]
edition = "2021"

[lib]
name = "ai_skillhub_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2", features = ["json"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
